--- a/server/bin/plugins/vtg_parser.py.dist
+++ b/server/bin/plugins/vtg_parser.py.dist
@@ -65,7 +65,8 @@ sys.path.append(dirname(dirname(dirname(dirname(realpath(__file__))))))
 from server.lib.openvdm_plugin import OpenVDMPluginCSV
 from server.lib.openvdm import OpenVDM_API
 
-RAW_COLUMNS = ['date','time','hdr','cog_t','T','cog_m','M','sog_kts','N','sog_kph','K','checksum']
+RAW_COLUMNS = ['date_time','hdr','cog_t','T','cog_m','M','sog_kts','N','sog_kph','K','checksum']
+# RAW_COLUMNS = ['date', 'time','hdr','cog_t','T','cog_m','M','sog_kts','N','sog_kph','K','checksum']
 PROC_COLUMNS = ['date_time','cog_t','cog_m','sog_kts','sog_kph']
 
 ROUNDING = {
@@ -110,7 +111,8 @@ class VTGPlugin(OpenVDMPluginCSV):
                 for lineno, line in enumerate(reader):
 
                     try:
-                        date_time = ' '.join([line['date'], line['time']])
+                        #date_time = ' '.join([line['date'], line['time']])
+                        date_time = line['date_time']
                         cog_t = np.nan if line['cog_t'] == '' else float(line['cog_t'])
                         cog_m = np.nan if line['cog_m'] == '' else float(line['cog_m'])
                         sog_kts = np.nan if line['sog_kts'] == '' else float(line['sog_kts'])
@@ -179,7 +181,7 @@ class VTGPlugin(OpenVDMPluginCSV):
         self.add_value_validity_stat([len(df_proc[(df_proc['sog_kts'] <= MAX_SOG_KTS)]),len(df_proc[(df_proc['sog_kts'] > MAX_SOG_KTS)])], "SOG Knots Validity")
     
         self.add_bounds_stat([round(df_proc['sog_kph'].min(),3), round(df_proc['sog_kph'].max(),3)], 'SOG KPH Bounds', 'deg')
-        self.add_value_validity_stat([len(df_proc[(df_proc['sog_kph'] <= MAX_SOG_Kph)]),len(df_proc[(df_proc['sog_kph'] > MAX_SOG_KTS)])], "SOG KPH Validity")
+        self.add_value_validity_stat([len(df_proc[(df_proc['sog_kph'] <= MAX_SOG_KPH)]),len(df_proc[(df_proc['sog_kph'] > MAX_SOG_KPH)])], "SOG KPH Validity")
 
         self.add_time_bounds_stat([df_proc.date_time.min(), df_proc.date_time.max()])
         
