--- a/server/plugins/parsers/comp_pres_rov_parser.py.dist
+++ b/server/plugins/parsers/comp_pres_rov_parser.py.dist
@@ -1,12 +1,11 @@
 # =================================================================================== #
 #
-#         FILE:  vtg_parser.py
+#         FILE:  comp_pres_parser.py
 #
-#        USAGE:  vtg_parser.py [-h] [-v+] [--timeFormat] [--startDT] [--stopDT] <dataFile>
+#        USAGE:  comp_pres_parser.py [-h] [-v+] [--timeFormat] [--startDT] [--stopDT] <dataFile>
 #
-#  DESCRIPTION:  Parse the supplied NMEA-formtted VTG file (w/ SCS formatted timestamp)
-#                and return the json-formatted string used by OpenVDM as part of it's
-#                Data dashboard.
+#  DESCRIPTION:  Parse the supplied compensator pressures file and return the json-
+#                formatted string used by OpenVDM as part of it's Data dashboard.
 #
 #      OPTIONS:  [-h] Return the help message.
 #                [-v] Increase verbosity (default: warning)
@@ -29,7 +28,7 @@
 #      COMPANY:  Capable Solutions
 #      VERSION:  2.5
 #      CREATED:  2016-08-29
-#     REVISION:  2021-01-16
+#     REVISION:  2021-01-17
 #
 # LICENSE INFO:  Open Vessel Data Management v2.5 (OpenVDMv2)
 #                Copyright (C) 2021 OceanDataRat.org
@@ -56,44 +55,40 @@ import numpy as np
 import argparse
 import logging
 from datetime import datetime
-from geopy import Point
-from geopy.distance import great_circle
 
 from os.path import dirname, realpath
 sys.path.append(dirname(dirname(dirname(dirname(realpath(__file__))))))
 
-from server.lib.openvdm_plugin import OpenVDMPluginCSV
+from server.lib.openvdm_plugin import OpenVDMCSVParser
 from server.lib.openvdm import OpenVDM_API
 
-RAW_COLUMNS = ['date_time','hdr','cog_t','T','cog_m','M','sog_kts','N','sog_kph','K','checksum']
-# RAW_COLUMNS = ['date', 'time','hdr','cog_t','T','cog_m','M','sog_kts','N','sog_kph','K','checksum']
-PROC_COLUMNS = ['date_time','cog_t','cog_m','sog_kts','sog_kph']
+RAW_COLUMNS = ['date_time','hdr','comp1','comp2','comp3','comp4','comp5','comp6'] # OpenRVDAS style
+RAW_COLUMNS = ['date','time','hdr','comp1','comp2','comp3','comp4','comp5','comp6'] # SCS style
+PROC_COLUMNS = ['date_time','comp1','comp2','comp3','comp4','comp5','comp6']
 
 ROUNDING = {
-    'cog_t': 3,
-    'cog_m': 3,
-    'sog_kts': 3,
-    'sog_kph': 3
+    'comp1': 3,
+    'comp2': 3,
+    'comp3': 3,
+    'comp4': 3,
+    'comp5': 3,
+    'comp6': 3
 }
 
-MIN_COG = 0
-MAX_COG = 360
-
-MAX_SOG_KTS = 25
-MAX_SOG_KPH = MAX_SOG_KTS * 1.852
+MIN_DEPTH = 0
 
 MAX_DELTA_T = pd.Timedelta('10 seconds')
 
-DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 Format, OpenRVDAS default
-# DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS Format
+DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 Format, OpenRVDAS style
+# DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS style
 
 
-class VTGPlugin(OpenVDMPluginCSV):
+class CompPresParser(OpenVDMCSVParser):
 
-    def __init__(self, raw_cols, proc_cols, start_dt=None, stop_dt=None, time_format=DEFAULT_TIME_FORMAT, use_openvdm_api=True):
+    def __init__(self, start_dt=None, stop_dt=None, time_format=DEFAULT_TIME_FORMAT, use_openvdm_api=True):
         super().__init__(start_dt=start_dt, stop_dt=stop_dt)
-        self.raw_cols = raw_cols
-        self.proc_cols = proc_cols
+        self.raw_cols = RAW_COLS
+        self.proc_cols = PROC_COLS
         self.time_format = time_format
         self.openvdm = OpenVDM_API() if use_openvdm_api else None
 
@@ -111,12 +106,14 @@ class VTGPlugin(OpenVDMPluginCSV):
                 for lineno, line in enumerate(reader):
 
                     try:
-                        #date_time = ' '.join([line['date'], line['time']])
-                        date_time = line['date_time']
-                        cog_t = np.nan if line['cog_t'] == '' else float(line['cog_t'])
-                        cog_m = np.nan if line['cog_m'] == '' else float(line['cog_m'])
-                        sog_kts = np.nan if line['sog_kts'] == '' else float(line['sog_kts'])
-                        sog_kph = np.nan if line['sog_kph'] == '' else float(line['sog_kph'])
+                        date_time = line['date_time'] # OpenRVDAS style
+                        #date_time = ' '.join([line['date'], line['time']]) # SCS style
+                        comp1 = float(line['comp1'])
+                        comp2 = float(line['comp2'])
+                        comp3 = float(line['comp3'])
+                        comp4 = float(line['comp4'])
+                        comp5 = float(line['comp5'])
+                        comp6 = float(line['comp6'])
 
                     except Exception as err:
                         errors.append(lineno)
@@ -126,10 +123,12 @@ class VTGPlugin(OpenVDMPluginCSV):
 
                     else:
                         raw_into_df['date_time'].append(date_time)
-                        raw_into_df['cog_t'].append(cog_t)
-                        raw_into_df['cog_m'].append(cog_m)
-                        raw_into_df['sog_kts'].append(sog_kts)
-                        raw_into_df['sog_kph'].append(sog_kph)
+                        raw_into_df['comp1'].append(comp1)
+                        raw_into_df['comp2'].append(comp2)
+                        raw_into_df['comp3'].append(comp3)
+                        raw_into_df['comp4'].append(comp4)
+                        raw_into_df['comp5'].append(comp5)
+                        raw_into_df['comp6'].append(comp6)
 
         except Exception as err:
             logging.error("Problem accessing input file: {}".format(filePath))
@@ -151,7 +150,6 @@ class VTGPlugin(OpenVDMPluginCSV):
         logging.debug("Converting data_time to datetime datatype...")
         
         df_proc['date_time'] = pd.to_datetime(df_proc['date_time'], format=self.time_format)
-        # df_proc['date_time'] = pd.to_datetime(df_proc['date_time'], infer_datetime_format=True)
 
         # Optionally crop data by start/stop times
         if self.start_dt or self.stop_dt:
@@ -170,25 +168,10 @@ class VTGPlugin(OpenVDMPluginCSV):
 
         logging.debug("Tabulating statistics...")
         self.add_row_validity_stat([len(df_proc), len(errors)])
-
-        self.add_bounds_stat([round(df_proc['cog_t'].min(),3), round(df_proc['cog_t'].max(),3)], "COG True Bounds", "deg")
-        self.add_value_validity_stat([len(df_proc[(df_proc['cog_t'] >= MIN_COG) & (df_proc['cog_t'] <= MAX_COG)]),len(df_proc[(df_proc['cog_t'] < MIN_COG) & (df_proc['cog_t'] > MAX_COG)])], "COG True Validity")
-
-        self.add_bounds_stat([round(df_proc['cog_m'].min(),3), round(df_proc['cog_m'].max(),3)], "COG Magnetic Bounds", "deg")
-        self.add_value_validity_stat([len(df_proc[(df_proc['cog_t'] >= MIN_COG) & (df_proc['cog_t'] <= MAX_COG)]),len(df_proc[(df_proc['cog_t'] < MIN_COG) & (df_proc['cog_t'] > MAX_COG)])], "COG Magnetic Validity")
-
-        self.add_bounds_stat([round(df_proc['sog_kts'].min(),3), round(df_proc['sog_kts'].max(),3)], 'SOG Knots Bounds', 'deg')
-        self.add_value_validity_stat([len(df_proc[(df_proc['sog_kts'] <= MAX_SOG_KTS)]),len(df_proc[(df_proc['sog_kts'] > MAX_SOG_KTS)])], "SOG Knots Validity")
-    
-        self.add_bounds_stat([round(df_proc['sog_kph'].min(),3), round(df_proc['sog_kph'].max(),3)], 'SOG KPH Bounds', 'deg')
-        self.add_value_validity_stat([len(df_proc[(df_proc['sog_kph'] <= MAX_SOG_KPH)]),len(df_proc[(df_proc['sog_kph'] > MAX_SOG_KPH)])], "SOG KPH Validity")
-
         self.add_time_bounds_stat([df_proc.date_time.min(), df_proc.date_time.max()])
-        
         self.add_bounds_stat([round(df_proc.deltaT.min().total_seconds(),3), round(df_proc.deltaT.max().total_seconds(),3)], 'DeltaT Bounds', 'seconds')
         self.add_value_validity_stat([len(df_proc[(df_proc['deltaT'] <= MAX_DELTA_T)]),len(df_proc[(df_proc['deltaT'] > MAX_DELTA_T)])], 'DeltaT Validity')
     
-
         logging.debug("Running quality tests...")
         # % of bad rows in datafile
         error_rate = len(errors) / (len(df_proc) + len(errors))
@@ -208,38 +191,6 @@ class VTGPlugin(OpenVDMPluginCSV):
         else:
             self.add_quality_test_passed("DeltaT")
 
-        error_rate = len(df_proc[(df_proc['sog_kts'] > MAX_SOG_KTS)]) / len(df_proc)
-        if error_rate > .25:
-            self.add_quality_test_failed("SOG KTS")
-        elif error_rate > .10:
-            self.add_quality_test_warning("SOG KTS")
-        else:
-            self.add_quality_test_passed("SOG KTS")
-
-        error_rate = len(df_proc[(df_proc['sog_kph'] > MAX_SOG_KPH)]) / len(df_proc)
-        if error_rate > .25:
-            self.add_quality_test_failed("SOG KPH")
-        elif error_rate > .10:
-            self.add_quality_test_warning("SOG KPH")
-        else:
-            self.add_quality_test_passed("SOG KPH")
-
-        error_rate = len(df_proc[(df_proc['cog_t'] < MIN_COG) & (df_proc['cog_t'] > MAX_COG)]) / len(df_proc)
-        if error_rate > .25:
-            self.add_quality_test_failed("COG True")
-        elif error_rate > .10:
-            self.add_quality_test_warning("COG True")
-        else:
-            self.add_quality_test_passed("COG True")
-
-        error_rate = len(df_proc[(df_proc['cog_m'] < MIN_COG) & (df_proc['cog_m'] > MAX_COG)]) / len(df_proc)
-        if error_rate > .25:
-            self.add_quality_test_failed("COG Magnetic")
-        elif error_rate > .10:
-            self.add_quality_test_warning("COG Magnetic")
-        else:
-            self.add_quality_test_passed("COG Magnetic")
-
         # set index
         logging.debug('Setting index...')
         df_proc = df_proc.set_index('date_time')
@@ -256,27 +207,39 @@ class VTGPlugin(OpenVDMPluginCSV):
         logging.debug("Building visualization data...")
 
         visualizerDataObj = {'data':[], 'unit':'', 'label':''}
-        visualizerDataObj['data'] = json.loads(df_proc[['date_time','cog_t']].to_json(orient='values'))
-        visualizerDataObj['unit'] = 'deg'
-        visualizerDataObj['label'] = 'COG, True'
+        visualizerDataObj['data'] = json.loads(df_crop[['date_time','comp1']].to_json(orient='values'))
+        visualizerDataObj['unit'] = '%'
+        visualizerDataObj['label'] = 'Compensator 1'
         # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
         self.add_visualization_data(visualizerDataObj)
 
-        visualizerDataObj['data'] = json.loads(df_proc[['date_time','cog_m']].to_json(orient='values'))
-        visualizerDataObj['unit'] = 'deg'
-        visualizerDataObj['label'] = 'COG, Magnetic'
-        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
-        self.add_visualization_data(visualizerDataObj)
-        
-        visualizerDataObj['data'] = json.loads(df_proc[['date_time','sog_kts']].to_json(orient='values'))
-        visualizerDataObj['unit'] = 'kts'
-        visualizerDataObj['label'] = 'SOG, kts'
+        visualizerDataObj['data'] = json.loads(df_crop[['date_time','comp2']].to_json(orient='values'))
+        visualizerDataObj['unit'] = '%'
+        visualizerDataObj['label'] = 'Compensator 2'
         # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
         self.add_visualization_data(visualizerDataObj)
 
-        visualizerDataObj['data'] = json.loads(df_proc[['date_time','sog_kph']].to_json(orient='values'))
-        visualizerDataObj['unit'] = 'kph'
-        visualizerDataObj['label'] = 'SOG, kph'
+        visualizerDataObj['data'] = json.loads(df_crop[['date_time','comp3']].to_json(orient='values'))
+        visualizerDataObj['unit'] = '%'
+        visualizerDataObj['label'] = 'Compensator 3'
+        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
+        self.add_visualization_data(visualizerDataObj)
+
+        visualizerDataObj['data'] = json.loads(df_crop[['date_time','comp4']].to_json(orient='values'))
+        visualizerDataObj['unit'] = '%'
+        visualizerDataObj['label'] = 'Compensator 4'
+        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
+        self.add_visualization_data(visualizerDataObj)
+
+        visualizerDataObj['data'] = json.loads(df_crop[['date_time','comp5']].to_json(orient='values'))
+        visualizerDataObj['unit'] = '%'
+        visualizerDataObj['label'] = 'Compensator 5'
+        # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
+        self.add_visualization_data(visualizerDataObj)
+
+        visualizerDataObj['data'] = json.loads(df_crop[['date_time','comp6']].to_json(orient='values'))
+        visualizerDataObj['unit'] = '%'
+        visualizerDataObj['label'] = 'Compensator 6'
         # output['visualizerData'].append(copy.deepcopy(visualizerDataObj))
         self.add_visualization_data(visualizerDataObj)
 
@@ -289,7 +252,7 @@ class VTGPlugin(OpenVDMPluginCSV):
 # Required python code for running the script as a stand-alone utility
 # -------------------------------------------------------------------------------------
 if __name__ == "__main__":
-    parser = argparse.ArgumentParser(description='Parse NMEA VTG data')
+    parser = argparse.ArgumentParser(description='Parse ROV Compensator data')
     parser.add_argument('-v', '--verbosity', dest='verbosity',
                         default=0, action='count',
                         help='Increase output verbosity')
@@ -317,12 +280,12 @@ if __name__ == "__main__":
     parsed_args.verbosity = min(parsed_args.verbosity, max(LOG_LEVELS))
     logging.getLogger().setLevel(LOG_LEVELS[parsed_args.verbosity])
 
-    ovdm_plugin = VTGPlugin(RAW_COLUMNS, PROC_COLUMNS, start_dt=parsed_args.startDT, stop_dt=parsed_args.stopDT, time_format=parsed_args.timeFormat)
+    ovdm_parser = CompPresParser(RAW_COLUMNS, PROC_COLUMNS, start_dt=parsed_args.startDT, stop_dt=parsed_args.stopDT, time_format=parsed_args.timeFormat)
 
     try:
         logging.info("Processing file: {}".format(parsed_args.dataFile))
-        ovdm_plugin.process_file(parsed_args.dataFile)
-        print(ovdm_plugin.toJSON())
+        ovdm_parser.process_file(parsed_args.dataFile)
+        print(ovdm_parser.toJSON())
         logging.info("Done!")
     except Exception as err:
         logging.error(str(err))
