--- a/server/plugins/parsers/gga_parser.py.dist
+++ b/server/plugins/parsers/gga_parser.py.dist
@@ -4,9 +4,8 @@
 #
 #        USAGE:  gga_parser.py [-h] [-v+] [--timeFormat] [--startDT] [--stopDT] <dataFile>
 #
-#  DESCRIPTION:  Parse the supplied NMEA-formtted GGA file (w/ SCS formatted timestamp)
-#                and return the json-formatted string used by OpenVDM as part of it's
-#                Data dashboard.
+#  DESCRIPTION:  Parse the supplied NMEA-formtted GGA file and return the json-
+#                formatted string used by OpenVDM as part of it's Data dashboard.
 #
 #      OPTIONS:  [-h] Return the help message.
 #                [-v] Increase verbosity (default: warning)
@@ -62,11 +61,11 @@ from geopy.distance import great_circle
 from os.path import dirname, realpath
 sys.path.append(dirname(dirname(dirname(dirname(realpath(__file__))))))
 
-from server.lib.openvdm_plugin import OpenVDMPluginCSV
+from server.lib.openvdm_plugin import OpenVDMCSVParser
 from server.lib.openvdm import OpenVDM_API
 
-RAW_COLUMNS = ['date_time','hdr','gps_time','latitude','NS','longitude','EW','fix_quality','num_satellites','hdop','altitude','altitude_m','height_wgs84','height_wgs84_m','last_update','dgps_station_checksum']
-#RAW_COLUMNS = ['date','time','hdr','gps_time','latitude','NS','longitude','EW','fix_quality','num_satellites','hdop','altitude','altitude_m','height_wgs84','height_wgs84_m','last_update','dgps_station_checksum']
+RAW_COLUMNS = ['date_time','hdr','gps_time','latitude','NS','longitude','EW','fix_quality','num_satellites','hdop','altitude','altitude_m','height_wgs84','height_wgs84_m','last_update','dgps_station_checksum'] # OpenRVDAS style
+#RAW_COLUMNS = ['date','time','hdr','gps_time','latitude','NS','longitude','EW','fix_quality','num_satellites','hdop','altitude','altitude_m','height_wgs84','height_wgs84_m','last_update','dgps_station_checksum'] # SCS style
 PROC_COLUMNS = ['date_time','latitude','longitude','num_satellites','hdop','altitude','height_wgs84']
 
 ROUNDING = {
@@ -77,16 +76,16 @@ ROUNDING = {
 MAX_VELOCITY = 13.8 #Max speed of vessel (mph)
 MAX_DELTA_T = pd.Timedelta('10 seconds')
 
-DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 Format, OpenRVDAS default
-# DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS Format
+DEFAULT_TIME_FORMAT = "%Y-%m-%dT%H:%M:%S.%fZ" # ISO8601 format, OpenRVDAS style
+# DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS style
 
 
-class GGAPlugin(OpenVDMPluginCSV):
+class GGAParser(OpenVDMCSVParser):
 
-    def __init__(self, raw_cols, proc_cols, start_dt=None, stop_dt=None, time_format=DEFAULT_TIME_FORMAT, use_openvdm_api=True):
+    def __init__(self, start_dt=None, stop_dt=None, time_format=DEFAULT_TIME_FORMAT, use_openvdm_api=True):
         super().__init__(start_dt=start_dt, stop_dt=stop_dt)
-        self.raw_cols = raw_cols
-        self.proc_cols = proc_cols
+        self.raw_cols = RAW_COLUMNS
+        self.proc_cols = PROC_COLUMNS
         self.time_format = time_format
         self.openvdm = OpenVDM_API() if use_openvdm_api else None
 
@@ -111,8 +110,8 @@ class GGAPlugin(OpenVDMPluginCSV):
                 for lineno, line in enumerate(reader):
 
                     try:
-                        date_time = line['date_time']
-                        # date_time = ' '.join([line['date'], line['time']])
+                        date_time = line['date_time'] # OpenRVDAS style
+                        # date_time = ' '.join([line['date'], line['time']]) # SCS style
                         longitude = (self._hemisphere_correction(float(line['longitude'][:3]) + float(line['longitude'][3:])/60, line['EW']))
                         latitude = (self._hemisphere_correction(float(line['latitude'][:2]) + float(line['latitude'][2:])/60, line['NS']))
                         num_satellites = int(line['num_satellites'])
@@ -155,7 +154,6 @@ class GGAPlugin(OpenVDMPluginCSV):
         logging.debug("Converting data_time to datetime datatype...")
         
         df_proc['date_time'] = pd.to_datetime(df_proc['date_time'], format=self.time_format)
-        # df_proc['date_time'] = pd.to_datetime(df_proc['date_time'], infer_datetime_format=True)
 
         # Optionally crop data by start/stop times
         if self.start_dt or self.stop_dt:
@@ -310,12 +308,12 @@ if __name__ == "__main__":
     parsed_args.verbosity = min(parsed_args.verbosity, max(LOG_LEVELS))
     logging.getLogger().setLevel(LOG_LEVELS[parsed_args.verbosity])
 
-    ovdm_plugin = GGAPlugin(RAW_COLUMNS, PROC_COLUMNS, start_dt=parsed_args.startDT, stop_dt=parsed_args.stopDT, time_format=parsed_args.timeFormat)
+    ovdm_parser = GGAParser(start_dt=parsed_args.startDT, stop_dt=parsed_args.stopDT, time_format=parsed_args.timeFormat)
 
     try:
         logging.info("Processing file: {}".format(parsed_args.dataFile))
-        ovdm_plugin.process_file(parsed_args.dataFile)
-        print(ovdm_plugin.toJSON())
+        ovdm_parser.process_file(parsed_args.dataFile)
+        print(ovdm_parser.toJSON())
         logging.info("Done!")
     except Exception as err:
         logging.error(str(err))
